# EMBER-Experimental

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  tools.sh
.github/workflows/: .pre-commit-config.yaml  ci.yaml  ci.yml  coverage.yml
cmake/: Catch2.cmake  Packaging.cmake  ProjectOptions.cmake  Warnings.cmake
ember/: CMakeLists.txt  ember.hpp
ember/datatypes/: em_array.hpp  em_fifo.hpp  em_integer.hpp  em_types.hpp
ember/datatypes/cpp/: em_integer.cpp
ember/datatypes/tpp/: em_array.tpp  em_fifo.tpp
ember/faults/: em_fault.hpp  emf_baseline_dtypes.hpp  emf_dtypes.hpp  emf_list.hpp  emf_models.hpp  emf_random.hpp  flf_random.hpp
ember/faults/cpp/: emf_random.cpp
ember/faults/tpp/: emf_dtypes.tpp  emf_list.tpp  emf_models.tpp
ember/kernel/: em_imodule.hpp  em_iobject.hpp  em_iport.hpp  em_isaboteur.hpp  em_port.hpp
ember/kernel/tpp/: em_port.tpp
ember/sysutils/: em_defs.hpp  em_math.hpp  em_random.hpp  em_string.hpp  em_tick.hpp  em_time.hpp
ember/sysutils/cpp/: CMakeLists.txt  em_string.cpp  em_tick.cpp  em_time.cpp
ember/sysutils/tpp/: em_random.tpp  em_tick.tpp  em_time.tpp
examples/adder/: CMakeLists.txt  adder.hpp  adder.tpp  adder_wreg.hpp  adder_wreg.tpp  main.cpp
examples/adder_array/: adder_array.hpp  adder_array.tpp  main.cpp
examples/dpsram/: main.cpp
examples/netlist/: inject.cpp  netlist.hpp  netlist.tpp  validate.cpp
examples/verilator/: mac_wrapper.cpp  mac_wrapper.hpp  main.cpp
examples/verilator/include/: mac.hpp
github/workflows/: ci.yml
saboteurs/ems_lib/ems_dpsram/: ems_dpsram.hpp
saboteurs/ems_lib/ems_ff/: ems_ff.hpp
saboteurs/ems_lib/ems_ff/tpp/: ems_ff.tpp  ems_ff_array.tpp
saboteurs/ems_lib/ems_stdcells/: ems_stdcells.hpp
saboteurs/ems_lib/ems_stdcells/cpp/: ems_stdcells.cpp
saboteurs/ems_lib/ems_stdcells/new/: ems_IGate.hpp
scripts/: configure_coverage.sh  format.sh  format_check.sh  generate_coverage.sh  test.sh
tests/sanity/: CMakeLists.txt
tests/sanity/sysutils/: CMakeLists.txt
tests/sanity/sysutils/em_tick/: CMakeLists.txt  core_func.cpp  template_func.cpp
tests/sanity/sysutils/em_time/: CMakeLists.txt  test.cpp  test_temp.cpp
tools/coverage/: generate-html.sh  merge-profdata.sh  show-summary.sh
verilator/: ember_verilator.hpp  emv_convert_array.hpp  emv_convert_c.hpp  emv_dtypes.hpp  emv_saboteur.hpp
verilator/tpp/: emv_extended_saboteur.tpp  emv_nonext_saboteur.tpp
